Atualizei o número do zap que estava errado

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="https://www.instagram.com/cidade_folego_de_vida/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.facebook.com/iacfv" target="_blank"> <i class="fab fa-facebook"></i></a>
                 <a href="https://www.youtube.com/@cidadefolegodevida8352" target="_blank"> <i class="fab fa-youtube"></i></a>
-                <a href="https://w.app/n3Mjty" target="_blank"> <i class="fab fa-whatsapp"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=5521969824760&text=Ol%C3%A1!%20%F0%9F%8C%9F%20Bem-vindo%20%C3%A0%20Cidade%20F%C3%B4lego%20de%20Vida!%0A%0AEstamos%20aqui%20para%20te%20ajudar%20e%20esclarecer%20todas%20as%20suas%20d%C3%BAvidas.%20Seja%20sobre%20eventos,%20atividades,%20servi%C3%A7os%20da%20igreja%20ou%20qualquer%20outra%20informa%C3%A7%C3%A3o%20que%20voc%C3%AA%20precise,%20estamos%20%C3%A0%20disposi%C3%A7%C3%A3o%20para%20te%20atender.%0A%0AAtrav%C3%A9s%20do%20WhatsApp,%20estaremos%20mais%20pr%C3%B3ximos%20de%20voc%C3%AA%20para%20proporcionar%20apoio%20e%20informa%C3%A7%C3%B5es%20atualizadas.%20Fique%20%C3%A0%20vontade%20para%20nos%20contatar%20a%20qualquer%20momento.%20Sua%20participa%C3%A7%C3%A3o%20e%20intera%C3%A7%C3%A3o%20s%C3%A3o%20muito%20importantes%20para%20n%C3%B3s!%0A%0AQue%20a%20paz%20e%20a%20alegria%20estejam%20presentes%20em%20sua%20jornada%20conosco.%20Aguardamos%20o%20seu%20contato!%20%F0%9F%99%8F%E2%9C%A8" target="_blank"> <i class="fab fa-whatsapp"></i></a>
             </div>
 
             <div class="footer_copyright">
